[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitvec = "1.0.1"
cargo-aoc = "0.3.8"
fancy-regex = "0.14.0"
find_all = "2.0.0"
itertools = "0.14.0"
lapack = "0.20.0"
mathru = "0.15.5"
ndarray = "0.16.1"
# ndarray-linalg = { version = "0.17", features = ["openblas-system"] }
pathfinding = "4.14.0"
regex = "1.11.1"
scanf = "1.2.1"
